* Reduce the chances for artefacts with only one stat property.
* Add !a inscription to prompt when attacking with this wielded item.
* Upgrade equipment of Sonja, Psyche and Terence.
* Add some tiles "animations" whenever the screen is redrawn.
* Unrandarts and randarts now share the same, cleaner coding structure.
* More vaults.
* Tiles: re-added doll editing screen ('-' command).

Stone Soup 0.5.1 (20090728)
---------------------------

Disclaimer: These are merely the highlights, not an exhaustive list of changes.

* Improved performance for the Tiles version.
* Fixed crashes related to giant spores.
* Fixed Summon Horrible Things sometimes hanging or crashing.
* Fixed monsters refusing to enter or attack into grids on the map edge.
* Fixed minivaults not being placed.
* Fixed inconvenient electrical eels in entry vaults.
* Fixed summoning decks giving permanent summons at low power.
* Fixed erroneous "blocked line of fire" warnings.
* Fixed missing items in Tiles inventory menus.
* Fixed 'C' closing one out of several adjacent doors without prompting.
* Fixed Xom's repel stairs effect moving shops.
* Fixed Xom gifts not being destroyed in deep water.
* Fixed magic mapping bugs in the Tiles version.
* Fixed AltGr not being recognized in Windows Tiles version.
* Fixed Alt-Tab sometimes locking the Alt key on Windows.
* Fixed misbehaviour for temporary weapon brands and throwing.
* Fixed Blade Hands not counting as slicing while wearing melded gloves.
* Fixed berserking allies taking orders from 'ta'.
* Fixed random blinking sometimes placing the player in dangerous clouds.
* Fixed certain incorporeal monsters flying instead of levitating.
* Fixed server disconnects at --More-- prompts allowing to avoid retribution.
* Staff of earth damage is reduced by AC.
* Lowered damage output for elemental staves.
* Once entered, the gate to Zot remains open even without carrying runes.
* Add some fancy messaging when opening the gate to Zot.